[package]
name = "wifi-echo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-131072"] }
embassy-net = { version = "0.6.0", features = ["proto-ipv4", "dhcpv4", "tcp"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc = "0.6.0"
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32c3", "wifi", "log"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
